<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Tryb_Uniwersalny" Id="{34bd9fda-3a64-0332-25b7-3679d88cc468}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Tryb_Uniwersalny EXTENDS FB_SITP_Element
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="ZwrocCzyMoznaWyjscZeStanu" Id="{3e2be248-98b0-08d2-245e-e2e1e6053b7c}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		18.06.2025		TC 4024.66
	Zwraca true jak wyjście ze stanu jest możliwe
*)
METHOD PUBLIC ZwrocCzyMoznaWyjscZeStanu : BOOL

VAR
	eNowyTryb				: B_Baza.E_TrybyPracy;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//warunki wyjść dla każdego ze stanów osobnym FB
IF (THIS^.refstDaneSITP.arrMozliwoscPrzejsciaPamiedzyTrybamiWStanie [THIS^.refstDaneSITP.refeaktualnyTryb]) THEN		//sprawdzenie czy w tym stanie da się zmienić stan
	CASE THIS^.refstDaneSITP.ePolecenieZmianyTrybu OF
	E_SITP_PolecenieZmianyTrybu.Produkcja		: eNowyTryb := B_Baza.E_TrybyPracy.Produkcja;
 	E_SITP_PolecenieZmianyTrybu.Konserwacja		: eNowyTryb := B_Baza.E_TrybyPracy.Konserwacja;
 	E_SITP_PolecenieZmianyTrybu.Reczny			: eNowyTryb := B_Baza.E_TrybyPracy.Reczny;
 	E_SITP_PolecenieZmianyTrybu.Mycie			: eNowyTryb := B_Baza.E_TrybyPracy.Mycie;
 	E_SITP_PolecenieZmianyTrybu.Diagnostyka		: eNowyTryb := B_Baza.E_TrybyPracy.Diagnostyka;
// 	E_SITP_PolecenieZmianyTrybu.Uzytkownika2	: eNowyTryb := B_Baza.E_TrybyPracy.Uzytkownika2;
// 	E_SITP_PolecenieZmianyTrybu.Uzytkownika3	: eNowyTryb := B_Baza.E_TrybyPracy.Uzytkownika3;
// 	E_SITP_PolecenieZmianyTrybu.Uzytkownika4	: eNowyTryb := B_Baza.E_TrybyPracy.Uzytkownika4;
// 	E_SITP_PolecenieZmianyTrybu.Uzytkownika5	: eNowyTryb := B_Baza.E_TrybyPracy.Uzytkownika5;
	END_CASE
	IF (THIS^.refstDaneSITP.arrMozliwoscPrzejsciaPamiedzyTrybamiWStanie [eNowyTryb]) THEN
		IF (THIS^.refstDaneSITP.refarrTrybyWlaczone [eNowyTryb]) THEN
			ZwrocCzyMoznaWyjscZeStanu			:= THIS^.ZgodaNaZmianeTrybu (eNowyTryb);
		ELSE
			ZwrocCzyMoznaWyjscZeStanu			:= THIS^.BrakZgodyNaZmieneTrybu (7);		//tryb docelowy wylaczony
		END_IF
	ELSE
		ZwrocCzyMoznaWyjscZeStanu				:= THIS^.BrakZgodyNaZmieneTrybu (6);		//w docelowym trybie i aktualnym stanie zmiana niemożliwa
	END_IF
ELSE
	ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneTrybu (5);		//w trybie i stanie aktualnym zmiana niemożliwa
END_IF

]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>